# hermes-max

./: .env.example  .gitignore  ARCHITECTURE.md  EVAL_INTEGRATION.md  MCP_ENFORCEMENT_AUDIT.md  MIGRATION.md  QUICKSTART.md  README.md  RESEARCH.md  SKILLS.md  bootstrap-gpu.sh  bootstrap-lean.sh  bootstrap.sh  conductor.yaml.example  crawl4ai.sh  dry_run_trace.md  hm  inference.example.yaml  install.sh  mcp-manifest.yaml  modes.yaml  phoenix.sh  rate_limit_validation_trace.md  repo_dump.py  roles.yaml  searXNG.sh  serve-embed.sh  serve-rerank.sh
archive/: README.md
config/: conductor.example.yaml  inference.example.yaml  modes.example.yaml  otel-collector.yaml  roles.example.yaml
docs/: FORMAL_VS_INTEGRATION.md  PLANNER_PROMPT_SPEC.md  SEARCH_AND_RESEARCH.md  SSE_STREAMING.md  STORAGE_ISOLATION.md  STUDIO_ARCHITECTURE.md  architecture.md  cost.md  deployment.md  hardware.md  local-vs-subscription.md  long-horizon.md  mcp-servers.md  migration.md  modes.md  profiles.md  providers.md  research-engine.md  roster.md  skills.md  troubleshooting.md
dspy-evolution/: README.md  evolve.py  otel_emit.py  register-cron.sh  requirements.txt  run-evolution.sh  traces.py
hermes-config/: config.yaml
lib/: __init__.py  ensure_dep.sh  lazy_install.py  livelog.py
mcp-checkpoint/: README.md  checkpoint_core.py  healthcheck.sh  server.py  smoke_test.py
mcp-codebase-rag/: README.md  graph_core.py  healthcheck.sh  otel_emit.py  rag_core.py  requirements.txt  (+5 more)
studio-spike/app/: Cargo.toml  index.html  tauri.conf.json
studio-spike/app/capabilities/: default.json
studio-spike/app/src/: main.rs
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/capabilities/: default.json
studio/src-tauri/src/: config.rs  control.rs  detect.rs  keychain.rs  main.rs  notify.rs  project.rs  projects.rs  secret.rs  sidecar.rs  stream.rs  tray.rs  workshop.rs
(+414 files in other folders)
